[gd_scene load_steps=6 format=2]

[ext_resource path="res://valem_assets/Mobile - Flappy Bird - Version 12 Sprites.png" type="Texture" id=1]
[ext_resource path="res://Pipe.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.0516, 80.1373 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.14, 80.0707 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13, 19 )

[node name="Pipe" type="Node2D"]
script = ExtResource( 2 )

[node name="TopPipe" type="Area2D" parent="."]
position = Vector2( 0, -19 )

[node name="TopPipeSprite" type="Sprite" parent="TopPipe"]
position = Vector2( 0, -79.5 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 56, 323, 26, 161 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPipe"]
position = Vector2( 0, -80.2724 )
shape = SubResource( 1 )

[node name="BottomPipe" type="Area2D" parent="."]
position = Vector2( 0, 19 )

[node name="BottomPipeSprite" type="Sprite" parent="BottomPipe"]
position = Vector2( -13, 0 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 84, 323, 26, 160 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPipe"]
position = Vector2( 0, 80.1707 )
shape = SubResource( 2 )

[node name="ScoreArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreArea"]
shape = SubResource( 3 )
[connection signal="body_entered" from="TopPipe" to="." method="_on_TopPipe_body_entered"]
[connection signal="body_entered" from="BottomPipe" to="." method="_on_BottomPipe_body_entered"]
[connection signal="body_entered" from="ScoreArea" to="." method="_on_ScoreArea_body_entered"]
